# ai-music-tool

./: .gitignore  README.md  RUN.bat  SECURITY.md  eslint.config.mjs  main.js  next.config.js  package-lock.json  package.json  playwright.config.js  preload.js  tsconfig.json  vitest.config.js
.github/workflows/: ci-demucs-stems.yml  ci-musicgen.yml  ci-vocal-ml.yml  ci.yml  fail-safe-auto-fix.yml  fail-safe-bot.yml  fail-safe-pr-comments.yml  release.yml  tauri-studio-release.yml
ai-sidecar/: .gitignore  README.md  env.vocal.example  pyproject.toml  run_sidecar.py
ai-sidecar/ai_sidecar/: __init__.py  acousticbrainz.py  cover_generator.py  cover_ref_generator.py  cover_runtime.py  device.py  diffsinger_openvpi.py  fail_safe_fix.py  fail_safe_runtime.py  generate_jobs.py  genre_classifier.py  idle.py  jobs.py  main.py  mcp_stdio.py  musicgen.py  registry.py  sonic_signature.py  stems_separate.py  vision_analyzer.py  vocal_align.py  vocal_embed.py  vocal_env.py  vocal_ml.py  vocal_ml_models.py  vocal_synth.py  youtube_resolve.py  youtube_sonic.py
ai-sidecar/scripts/: diffsinger_bridge_example.py
ai-sidecar/tests/: conftest.py  test_acousticbrainz.py  test_api.py  test_cover_runtime.py  test_diffsinger_openvpi.py  test_fail_safe_fix.py  test_fail_safe_runtime.py  test_idle.py  test_separate_mock.py  test_sonic_signature.py  test_stems_integration.py  test_vocal_embed.py  test_vocal_env.py  test_vocal_ml.py  test_vocal_ml_models.py  test_vocal_synth.py  test_youtube_resolve.py  test_youtube_sonic.py
app/: error.jsx  layout.js  page.jsx
app/components/: app-shell.jsx  audio-highlight-waveform.jsx  audio-track-editor.jsx  audio-waveform-pro-prototype.jsx  canvas-integration-panel.jsx  center-analyzers-panel.jsx  center-co-producer-panel.jsx  center-cover-tools-panel.jsx  center-guided-path-panel.jsx  center-idea-panel.jsx  center-lyric-style-panel.jsx  center-maestro-chat-panel.jsx  center-mood-panel.jsx  center-music-controls-panel.jsx  center-pro-mode-panel.jsx  center-section-daw-lite.jsx  center-style-dna-search-panel.jsx  center-suno-pro-tools-panel.jsx  center-suno-reimport-panel.jsx  center-variations-panel.jsx  center-vocal-embed-studio.jsx  center-voice-character-studio.jsx  center-voice-style-panel.jsx  co-producer-lyrics-block.jsx  desktop-update-controls.jsx  fail-safe-bot-panel.jsx  (+13 more)
docs/: OSS_OPTIMIZATION_CANDIDATES.md  architecture-convergence.md  canvas-handoff.md  ci-reliability.md  desktop.md  fail-safe-bot.md  fail-safe-split.md  music-exchange.md  music-video-handoff.md  panel-inventory.md  publish.md  sourcery-auto-fix.md  style-catalog-research.md  voice-character-youtube.md
dsp-core/: Cargo.toml
dsp-core/src/: decode.rs  lib.rs  loudness.rs  main.rs  mastering.rs
fail-safe-ops/: README.md  package.json
lib/: suite-bridge.cjs  suite-handoff-config.cjs  suite-handoff-paths.json
scripts/: bootstrap-toolchains.ps1  bootstrap-toolchains.sh  build-sidecar-bundle.cjs  build-sidecar-bundle.ps1  build-sidecar-bundle.sh  cleanup-locked-electron-dist.ps1  dev-with-sidecar.ps1  dev-with-sidecar.sh  ensure-sidecar-binary.ps1  ensure-sidecar-binary.sh  fail-safe-bot-agent.cjs  fail-safe-bot-comment.cjs  fail-safe-bot-import.cjs  fail-safe-bot.cjs  fail-safe-cloud-dispatch.cjs  fail-safe-comment-trigger.cjs  fail-safe-fix-and-push.cjs  fail-safe-pr-autofix.cjs  fail-safe-runtime-deliver.cjs  fail-safe-runtime-github.cjs  fetch-ci-failure.cjs  fetch-sourcery-review.cjs  generate-panel-inventory.cjs  generate-readme-pdf.cjs  import-awesome-suno-concepts.cjs  install-architecture-cursor-setting.cjs  install-cursor-bot-settings.cjs  install-fail-safe-cursor-setting.cjs  install-git-hooks.cjs  install-sidecar-all.ps1  install-sidecar-all.sh  install-sidecar-classify.ps1  install-sidecar-classify.sh  install-sidecar-cover-ref.ps1  install-sidecar-cover.ps1  install-sidecar-generate.ps1  install-sidecar-generate.sh  install-sidecar-stems.ps1  install-sidecar-stems.sh  install-sidecar-vision.ps1  (+45 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: canvas_handoff.rs  lib.rs  main.rs  sidecar_manager.rs  studio_updater.rs  video_handoff.rs
suite-bridge/: README.md
tests/: analyzer-guided-merge-musicgen.test.js  analyzer-to-suno-style.test.js  analyzers-sidecar-probe.test.js  api-error-messages.test.js  audio-analyzer-sidecar.test.js  audio-export-formats.test.js  audio-highlight-slice.test.js  audio-only-boundary.test.js  awesome-suno-catalog.test.js  blank-state.test.js  canvas-addon-config.test.js  co-producer-advisory-llm.test.js  co-producer-hooks-llm.test.js  co-producer-llm.test.js  co-producer-musicgen-sketch.test.js  co-producer-musicgen.test.js  cover-and-suite-addons.test.js  cover-prompt.test.js  credential-storage.test.js  desktop-update-bridge.test.js  fail-safe-bot.test.js  fail-safe-comment-trigger.test.js  fail-safe-ops-classifier.test.js  fail-safe-runtime-prompt.test.js  fail-safe-runtime-reporter.test.js  hf-genre-map.test.js  image-analyzer-sidecar.test.js  lyric-generator.test.js  maestro-catalog-grounding.test.js  maestro-chat-engine.test.js  maintainer-settings.test.js  music-project-exchange.test.js  musicgen-merge-patch.test.js  musicgen-preview.test.js  musicgen-prompt.test.js  my-taste-profile.test.js  openvpi-ds-export.test.js  project-actions-split.test.js  project-bundle.test.js  project-persistence.test.js  (+33 more)
(+199 files in other folders)
