[project]
name = "ai-music-sidecar"
version = "0.25.0"
description = "Local AI inference sidecar for AI Music Creator (analysis, stem separation, generation)."
requires-python = ">=3.10,<3.13"  # PyTorch / audiocraft / demucs have no 3.13+ wheels yet

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
]

# Heavy model stacks are optional extras so the service (and /health, /analyze)
# can run before the multi-GB model deps are installed.
[project.optional-dependencies]
stems = ["torch>=2.2", "torchaudio>=2.2", "demucs>=4.0"]
classify = ["torch>=2.2", "transformers>=4.40"]
vision = ["torch>=2.2", "transformers>=4.40", "pillow>=10.0", "scikit-learn>=1.3"]
vocal = ["scipy>=1.11"]
vocal-ml = ["torch>=2.2", "torchaudio>=2.2", "scipy>=1.11", "requests>=2.31"]
vocal-rvc = ["rvc-python>=0.1.5"]
generate = ["torch>=2.2", "audiocraft>=1.3"]   # MusicGen (weights are CC-BY-NC: non-commercial)
all = ["torch>=2.2", "torchaudio>=2.2", "demucs>=4.0", "transformers>=4.40", "pillow>=10.0", "scikit-learn>=1.3", "audiocraft>=1.3", "scipy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_sidecar"]
