[package]
name = "ai-music-studio"
version = "0.50.3"
edition = "2021"
description = "Tauri shell for AI Music Creator (Path B). Hosts the web UI and bridges to the native Rust DSP core."
license = "MIT"

[lib]
# Tauri keeps app logic in a lib so it can be shared with the mobile entry point.
name = "ai_music_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rfd = "0.15"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }

# Native DSP core (loudness today; mastering/analysis next).
dsp-core = { path = "../dsp-core" }
